# skippy

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  bunfig.toml  eslint.config.js  issues.jsonl  main.py  package.json  pyproject.toml  session-ses_449e.md  tsconfig.json  turbo.json  vitest.config.ts
apps/cache/: package.json
apps/cache/src/: download.ts  generate-schema.ts  generate-test-fixtures.ts  generate-types.ts  generate-zod-schemas.ts  index.ts
apps/cache/test/: download.test.ts  generate-schema.test.ts  index.test.ts  (+3 more)
apps/cli/: package.json  tsconfig.json
apps/mcp-server/: package.json
apps/web/: drizzle.config.ts  package.json
cache/: arc-raiders-items.json
data/: events-schedule.json  glossary.md  items.json  quests.json  traders.json
data/arcs/: data.json  schema.json
data/events/: data.json  schema.json
data/items/: data.json  schema.json
data/quests/: data.json  schema.json
data/traders/: schema.json
docs/: arc-raiders-introduction-glossary.md  metaforge-api.md
docs/design/: zod-schema-generation.md
docs/implementation/: 00-overview.md  01-wave-foundation.md  02-wave-data-pipeline.md  03-wave-search-engine.md  04-wave-mcp-server.md  05-wave-cli-integration.md
docs/plans/: 2026-01-11-arc-raiders-mcp-server-design.md  2026-01-12-wire-up-schemas-and-types.md  2026-01-13-zod-schema-generation-design.md  2026-01-13-zod-schema-generation-plan.md
src/: main.py
test/fixtures/: arcs.json  events.json  items.json  quests.json  traders.json
test/integration/: health.test.ts  mcp.test.ts  search.test.ts
(+68 files in other folders)
